[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "fast-image-resize-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "2.0.0-alpha.4"}
napi-derive = "2.0.0-alpha.6"

fast_image_resize = "0.5.0"
image = "0.23.14"
png = "0.17.2"

[target.'cfg(all(not(all(target_os = "linux", target_arch = "aarch64", target_env = "musl")), not(all(target_os = "windows", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true # Enable Link Time Optimization
opt-level = 3
# Setting this to 1 may improve the performance of generated code, but may be slower to compile.
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
